--- a/video.html
+++ b/video.html
@@ -126,7 +126,7 @@
 				<div class="thumb-layout">
 <!--					<a href="https://youtu.be/k5jeF82HSAQ" onclick="window.open('http://www.kidzout.com', '_system'); return false;"> -->
 	<!--					<a href="var ref = cordova.InAppBrowser.open('http://apache.org', '_blank', 'location=yes');"> -->
-							<a href=window.open("https://youtu.be/k5jeF82HSAQ","_system");></a>
+							<a href="https://youtu.be/k5jeF82HSAQ"></a>
 						<img class="preload-image" data-original="images/pictures/1t2.jpg" alt="img" src="images/empty.png">
 						<strong>Home Equity Conversion Mortgage</strong>
 						<em>Full explaination with testimonials. <br>[ 15:35 ]</em>
