--- a/video2.html
+++ b/video2.html
@@ -101,12 +101,11 @@
 	  <div class="decoration"></div>
 	  <h2 class="center-text thin small-bottom">A Cornucopia of <br>
 	    Visual Inforamtion for Your Clients</h2>
-	  	  <div class="decoration"></div>
-	  <div class="content">
-	    <div class="heading-badge border-red-dark">
-	      <h3 class="bg-red-dark">Commercial Videos</h3>
-        </div>
-	      <div class="thumb-layout"> <a href="https://youtu.be/k5jeF82HSAQ"></a> <img class="preload-image" data-original="images/pictures/1t2.jpg" alt="img" src="images/empty.png"> <strong>Home Equity Conversion Mortgage</strong> <em>Full explaination with testimonials. <br>
+	  <div class="decoration deco-2 decoration-small animate-zoom"></div>
+	  <br>
+	  <div class="content" id="tab-1">
+	    <div class="thumb-layout">
+	      <a href="https://youtu.be/k5jeF82HSAQ"></a> <img class="preload-image" data-original="images/pictures/1t2.jpg" alt="img" src="images/empty.png"> <strong>Home Equity Conversion Mortgage</strong> <em>Full explaination with testimonials. <br>
 	        [ 15:35 ]</em> 
 			
 			<a href="https://youtu.be/zgHA7fq6S-o"> <img class="preload-image" data-original="images/pictures/2t2.jpg" alt="img" src="images/empty.png"> <strong>HECM Highlights</strong> <em>Commerial video covering the basics of a reverse mortgage. <br>
