--- a/video.html
+++ b/video.html
@@ -97,17 +97,36 @@
 		<a href="#" class="header-icon header-icon-4 open-sidebar-right"><i class="ion-ios-email-outline"></i></a>    
 	</div>
 	
+	<div id="page-content" class="page-content">	
+		<div id="page-content-scroll" class="header-clear"><!--Enables this element to be scrolled --> 
+
+			<div class="content-fullscreen">
+				<div class="home-fader animate-top animate-time-1000">
+							<img src="images/pictures/5.jpg" class="responsive-image" alt="img">
+					</div>
+				</div>
+				<div class="menu-bottom-bar menu-bottom-bar-five menu-bottom-bar-text dark-menu-bar flat-menu-bar full-bottom">
+			<a href="index.html"><i class="ion-android-checkmark-circle color-blue-light"></i><em>Main</em></a>
+			<a href="clientportal.html"><i class="ion-ios-home color-green-light"></i><em>Home</em></a>
+			<a href="erchart.html"><i class="ion-ios-pie-outline"></i><em>ER Chart</em></a>
+			<a href="introduce.html"><i class="ion-ios-people-outline"></i><em>Introduce </em></a>
+			<a href="support.html"><i class="ion-ios-heart-outline"></i><em>Support </em></a></div>
+
+<br><br>
+
+	
+	
 	<div class="animate-fade">
 	  <div class="decoration"></div>
 	  <h2 class="center-text thin small-bottom">A Cornucopia of <br>
 	    Visual Inforamtion for Your Clients</h2>
 	  	  <div class="decoration"></div>
 	  <div class="content">
-	    <div class="heading-badge border-red-dark">
-	      <h3 class="bg-red-dark">Commercial Videos</h3>
+	    <div class="heading-badge border-blue-dark">
+	      <h3 class="bg-blue-dark">Commercial</h3>
         </div>
-	      <div class="thumb-layout"> <a href="https://youtu.be/k5jeF82HSAQ"></a> <img class="preload-image" data-original="images/pictures/1t2.jpg" alt="img" src="images/empty.png"> <strong>Home Equity Conversion Mortgage</strong> <em>Full explaination with testimonials. <br>
-	        [ 15:35 ]</em> 
+	      <div class="thumb-layout"> <a href="https://youtu.be/k5jeF82HSAQ"> <img class="preload-image" data-original="images/pictures/1t2.jpg" alt="img" src="images/empty.png"> <strong>Home Equity Conversion Mortgage</strong> <em>Full explaination with testimonials. <br>
+			  [ 15:35 ]</em> </a>
 			
 			<a href="https://youtu.be/zgHA7fq6S-o"> <img class="preload-image" data-original="images/pictures/2t2.jpg" alt="img" src="images/empty.png"> <strong>HECM Highlights</strong> <em>Commerial video covering the basics of a reverse mortgage. <br>
 	          [ 2:24 ]</em> </a> 
@@ -140,23 +159,7 @@
 	    <div class="deco-2"></div>
       </div>
 </div>
-	<div id="page-content" class="page-content">	
-		<div id="page-content-scroll" class="header-clear"><!--Enables this element to be scrolled --> 
 
-			<div class="content-fullscreen">
-				<div class="home-fader animate-top animate-time-1000">
-							<img src="images/pictures/5.jpg" class="responsive-image" alt="img">
-					</div>
-				</div>
-				<div class="menu-bottom-bar menu-bottom-bar-five menu-bottom-bar-text dark-menu-bar flat-menu-bar full-bottom">
-			<a href="index.html"><i class="ion-android-checkmark-circle color-blue-light"></i><em>Main</em></a>
-			<a href="clientportal.html"><i class="ion-ios-home color-green-light"></i><em>Home</em></a>
-			<a href="erchart.html"><i class="ion-ios-pie-outline"></i><em>ER Chart</em></a>
-			<a href="introduce.html"><i class="ion-ios-people-outline"></i><em>Introduce </em></a>
-			<a href="support.html"><i class="ion-ios-heart-outline"></i><em>Support </em></a></div>
-
-<br><br>
-		</div> 
 							<div class="decoration"></div>
 
 			<div class="footer footer-dark">
