--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						</div>
 						<h1 class="color-white animate-fade animate-delay-100">PREFERRED CLIENT GROUP</h1><br>
 						<a href="clientportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>CLIENT PORTAL</center><br>
-						<a href="video.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>AGENT PORTAL</center>
+						<a href="agentportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>AGENT PORTAL</center>
 					</div><br>
 					<h4 class="color-green-dark animate-fade animate-delay-200">
 					  <center><em>It all starts with One Simple Question</em></center>
