--- a/clientportal.html
+++ b/clientportal.html
@@ -153,7 +153,7 @@
 				<br>				
 			  <a href="erchart.html">				
 				<div class="decoration hide-if-responsive"></div>
-				<div class="column-half-image-left one-half-responsive last-column">
+				<div class="column-half-image-left one-half-responsive">
 					<img class="preload-image" src="images/empty.png" data-original="images/pictures/2t.jpg" alt="img">
 					<h4>Equity Release Chart</h4>
 					<p>
@@ -162,7 +162,7 @@
 					</div></a>
 				<br>				
 			  <a href="introduce.html">				
-			  <div class="column-half-image-right one-half-responsive">
+			  <div class="column-half-image-right one-half-responsive last-column">
 					<img class="preload-image" src="images/empty.png" data-original="images/pictures/10t.jpg" alt="img">
 					<h4>Introduce Your Client</h4>
 					<p>
@@ -172,7 +172,7 @@
 				<br>				
 				<a href="cemail.html">				
 				<div class="decoration hide-if-responsive"></div>
-				<div class="column-half-image-left one-half-responsive last-column">
+				<div class="column-half-image-left one-half-responsive">
 					<img class="preload-image" src="images/empty.png" data-original="images/pictures/11t.jpg" alt="img">
 					<h4>Email Your Client Information</h4>
 					<p>
@@ -181,7 +181,7 @@
 				</div></a>
 				<br>
 				<a href="marketing.html">				
-			  <div class="column-half-image-right one-half-responsive">
+			  <div class="column-half-image-right one-half-responsive last-column">
 					<img class="preload-image" src="images/empty.png" data-original="images/pictures/10t.jpg" alt="img">
 					<h4>Marketing Materials</h4>
 					<p>
