--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 							<img src="images/empty.png" data-original="images/preload-logo.png" class="preload-image" alt="PCG">
 						</div>
 						<h1 class="color-white animate-fade animate-delay-100">PREFERRED CLIENT GROUP</h1><br>
-						<a href="clientportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>CLIENT PORTAL</center><br>
-						<a href="agentportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>AGENT PORTAL</center>
+						<a href="clientportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>
+						CLIENT  PORTAL
+						</center><br>
+						<a href="agentportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>
+						CONSULTANT PORTAL
+						</center>
 					</div><br>
 					<h4 class="color-green-dark animate-fade animate-delay-200">
 					  <center><em>It all starts with One Simple Question</em></center>
