--- a/clientportal.html
+++ b/clientportal.html
@@ -104,7 +104,7 @@
 				<div class="menu-bottom-bar menu-bottom-bar-five menu-bottom-bar-text dark-menu-bar flat-menu-bar full-bottom">
 			<a href="index.html"><i class="ion-android-checkmark-circle color-blue-light"></i><em>Main</em></a>
 			<a href="clientportal.html"><i class="ion-ios-home color-green-light"></i><em>Home</em></a>
-			<a href="erchart.html"><i class="ion-ios-pie-outline"></i><em>ER Chart</em></a>
+			<a href="erchart.html"><i class="ion-ios-pie-outline"></i><em>Matrix</em></a>
 			<a href="introduce.html"><i class="ion-ios-people-outline"></i><em>Introduce </em></a>
 			<a href="support.html"><i class="ion-ios-heart-outline"></i><em>Support </em></a></div>
 
@@ -112,7 +112,7 @@
 			
 		  <div class="animate-fade">
 				<div class="decoration"></div>
-				<h2 class="center-text thin small-bottom">Everything You Need<br>To Kick Your Clients Into High Gear</h2>
+				<h2 class="center-text thin small-bottom">The Tools You Need<br>To Assist Your Clients</h2>
 				<div class="decoration deco-2 decoration-small animate-zoom"></div>
 			  
 	<!--			<center><div class="center-boxed-text3 larger-text thin">
