--- a/video.html
+++ b/video.html
@@ -150,7 +150,7 @@
 			
 			
 						
-			<a href="https://www.youtube.com/embed/t7aZP8xC-FI" width="641" height="361" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> <img class="preload-image" data-original="images/pictures/1t22.jpg" alt="img" src="images/empty.png"> <strong>The 80K Rule.</strong> <em>Why would someone pay $80,000 to get a mortgage? Explore the principles and benefits of repositioning debt.</em> </a> 
+			<a href="http://www.pcggo.com/video/80K Rule.mp4"> <img class="preload-image" data-original="images/pictures/1t22.jpg" alt="img" src="images/empty.png"> <strong>The 80K Rule.</strong> <em>Why would someone pay $80,000 to get a mortgage? Explore the principles and benefits of repositioning debt.</em> </a> 
 			
 			
 			
