--- a/video.html
+++ b/video.html
@@ -150,20 +150,17 @@
 			
 			
 						
-			<a href="http://www.pcggo.com/video/80K Rule.mp4"> <img class="preload-image" data-original="images/pictures/1t22.jpg" alt="img" src="images/empty.png"> <strong>The 80K Rule.</strong> <em>Why would someone pay $80,000 to get a mortgage? Explore the principles and benefits of repositioning debt.</em> </a> 
+			<a href="http://www.pcggo.com/video/80K Rule.m4v"> <img class="preload-image" data-original="images/pictures/1t22.jpg" alt="img" src="images/empty.png"> <strong>The 80K Rule.</strong> <em>Why would someone pay $80,000 to get a mortgage? Explore the principles and benefits of repositioning debt.</em> </a> 
 			
 			
+			<a href="http://www.pcggo.com/video/carry that mortgage.m4v"> <img class="preload-image" data-original="images/pictures/2a.jpg" alt="img" src="images/empty.png"> <strong>Carry That Mortgage?</strong> <em>The new iPhone 7 is expected with the best new OS from Apple. We’re expecting a major overhaul of it’s OS</em> </a> <a href="http://www.pcggo.com/video/millionaire.mp4"> 
 			
 			
+			<a href="http://www.pcggo.com/video/Millionaire.m4v"><img class="preload-image" data-original="images/pictures/3ta.jpg" alt="img" src="images/empty.png"> <strong>My Millionaire Friend.</strong> <em>Why would a millionaire buy a financial product only to spend it on another financial product?</em> </a> <a href="https://youtu.be/nsbofMnJrUo"> 
 			
-			<a href="http://www.pcggo.com/video/carry that mortgage.mp4"> <img class="preload-image" data-original="images/pictures/2a.jpg" alt="img" src="images/empty.png"> <strong>Carry That Mortgage?</strong> <em>The new iPhone 7 is expected with the best new OS from Apple. We’re expecting a major overhaul of it’s OS</em> </a> <a href="http://www.pcggo.com/video/millionaire.mp4"> 
+			<a href="http://www.pcggo.com/video/loc payout.m4v"><img class="preload-image" data-original="images/pictures/0t1.jpg" alt="img" src="images/empty.png"> <strong>Permanent Line of Credit.</strong> <em>Would you like a large line of credit that can never be closed? There are strategies that can give your client that and more.</em> </a>  
 			
-			
-			<img class="preload-image" data-original="images/pictures/3ta.jpg" alt="img" src="images/empty.png"> <strong>My Millionaire Friend.</strong> <em>Why would a millionaire buy a financial product only to spend it on another financial product?</em> </a> <a href="https://youtu.be/nsbofMnJrUo"> 
-			
-			<img class="preload-image" data-original="images/pictures/0t1.jpg" alt="img" src="images/empty.png"> <strong>Permanent Line of Credit.</strong> <em>Would you like a large line of credit that can never be closed? There are strategies that can give your client that and more.</em> </a> <a href="https://youtu.be/m57YUGZNH74"> 
-			
-			<img class="preload-image" data-original="images/pictures/0t3.jpg" alt="img" src="images/empty.png"> <strong>HECM for Purchase.</strong> <em>Rightsize or purchase at roughly half the price with no monthly payments. What could you do with all the money saved?</em> </a> </div>
+			<a href="http://www.pcggo.com/video/h4p.m4v"><img class="preload-image" data-original="images/pictures/0t3.jpg" alt="img" src="images/empty.png"> <strong>HECM for Purchase.</strong> <em>Rightsize or purchase at roughly half the price with no monthly payments. What could you do with all the money saved?</em> </a> </div>
       </div>
 	  <div class="decoration"></div>
 	  <div class="decoration-lines-thin decoration-margins">
