--- a/marketing.html
+++ b/marketing.html
@@ -116,11 +116,7 @@
 <br><br>
 			
 			
-			<center>
-			<div class="decoration decoration-margins"></div>
-			<div class="content">
-				<a href="#" class="button button-round button-ghost button-magenta">Click Here to Go Directly to the Order Page...</a>
-			</div></center>  
+
 			
 		  <div class="animate-fade">
 				<h2 class="center-text thin small-bottom">Marketing <br>In support of a variety of topics</h2>
@@ -136,27 +132,27 @@
 				</div>
 				<div class="thumb-layout">
 
-					<a href="https://onedrive.live.com/embed?cid=102C0F87CD2FB0AC&resid=102C0F87CD2FB0AC%2156657&authkey=ACwS6bcOm30o7sw&em=2">
+					<a href="http://pcggo.com/docs/unlocking wealth.pdf">
 						<img class="preload-image" data-original="images/pictures/uw.jpg" alt="img" src="images/empty.png">
 						<strong>Unlocking Wealth</strong>
 						<em>Unlocking wealth presents the ideas of retirement income solutions and the client rewards.</em>
 					</a>                
-					<a href="https://onedrive.live.com/embed?cid=102C0F87CD2FB0AC&resid=102C0F87CD2FB0AC%2156651&authkey=AEHBfPJ84OeURbY&em=2">
+					<a href="http://pcggo.com/docs/restructuring debt.pdf">
 						<img class="preload-image" data-original="images/pictures/rd.jpg" alt="img" src="images/empty.png">
 						<strong>Restructuring Debt</strong>
 						<em>Restructuring debt speaks about the positive outcomes from eliminating debt as a path to additional income.</em>
 					</a>                
-					<a href="https://onedrive.live.com/embed?cid=102C0F87CD2FB0AC&resid=102C0F87CD2FB0AC%2156654&authkey=AHvCt3u_NUy7lZ0&em=2">
+					<a href="http://pcggo.com/docs/leaving a legacy.pdf">
 						<img class="preload-image" data-original="images/pictures/lp.jpg" alt="img" src="images/empty.png">
 						<strong>Legacy Planning</strong>
 						<em>Leaving a legacy, instead of a headache. The notion is delivered through the Unlocking Wealth process.</em>
 					</a>                
-					<a href="https://onedrive.live.com/embed?cid=102C0F87CD2FB0AC&resid=102C0F87CD2FB0AC%2156655&authkey=AGDRvbrXXZlUu8E&em=2">
+					<a href="http://pcggo.com/docs/reverse for purchase.pdf">
 						<img class="preload-image" data-original="images/pictures/pur.jpg" alt="img" src="images/empty.png">
 						<strong>HECM for Purchase</strong>
 						<em>HECM for purchase introduces the concept of utilizing the equity in a clients new house to fund their new house.</em>
 					</a>
-					<a href="https://onedrive.live.com/embed?cid=102C0F87CD2FB0AC&resid=102C0F87CD2FB0AC%2156658&authkey=ACmlb4ZKJK8uLE0&em=2">
+					<a href="http://pcggo.com/docs/veteran.pdf">
 						<img class="preload-image" data-original="images/pictures/vet.jpg" alt="img" src="images/empty.png">
 						<strong>Veteran Programs</strong>
 						<em>Special low cost equity release programs for our military and thier families.</em>
@@ -170,13 +166,13 @@
 					<h3 class="bg-blue-dark">Industry Publications</h3>
 				</div>
 				<div class="thumb-layout">
-					<a href="https://onedrive.live.com/embed?cid=102C0F87CD2FB0AC&resid=102C0F87CD2FB0AC%2156652&authkey=ACukrq8hbvy0UP8&em=2">
+					<a href="http://pcggo.com/docs/perfect mortgage.pdf">
 						<img class="preload-image" data-original="images/pictures/1t22.jpg" alt="img" src="images/empty.png">
 						<strong>The Perfect Mortgage</strong>
 						<em>What would the perfect mortgage for retirement look like? Take a peek!.</em>
 					</a>    
 					<br>
-					<a href="https://onedrive.live.com/embed?cid=102C0F87CD2FB0AC&resid=102C0F87CD2FB0AC%2156653&authkey=AJthqPnwheGg8CY&em=2">
+					<a href="http://pcggo.com/docs/fp eo rm.pdf">
 						<img class="preload-image" data-original="images/pictures/2a.jpg" alt="img" src="images/empty.png">
 						<strong>Fiducaries E&O and HECMs</strong>
 						<em>The new iPhone 7 is expected with the best new OS from Apple. We’re expecting a major overhaul of it’s OS</em>
@@ -192,7 +188,7 @@
 					<h3 class="bg-red-dark">Video and DVD</h3>
 				</div>
 				<div class="thumb-layout">
-					<a href="https://youtu.be/k5jeF82HSAQ">
+					<a href="http://www.pcggo.com/video/Ff Video Pcg 2019.m4v">
 						<img class="preload-image" data-original="images/pictures/1t22.jpg" alt="img" src="images/empty.png">
 						<strong>Home Equity Conversion Mortgage</strong>
 						<em>An excellent full feature video with live testimonials.</em>
