--- a/erchart.html
+++ b/erchart.html
@@ -100,7 +100,7 @@
 
 			<div class="content-fullscreen">
 				<div class="home-fader animate-top animate-time-1000">
-							<img src="images/pictures/4.jpg" class="responsive-image" alt="img">
+							<img src="images/pictures/4a.jpg" class="responsive-image" alt="img">
 					</div>
 				</div>
 				<div class="menu-bottom-bar menu-bottom-bar-five menu-bottom-bar-text dark-menu-bar flat-menu-bar full-bottom">
@@ -114,7 +114,7 @@
 
 			<div class="content gallery-adaptive no-bottom animate-fade">
 				<div class="decoration"></div>
-				<h2 class="center-text thin small-bottom">Equity Release Chart<br> How much tax-free cash<br> can you realease?</h2>
+				<h2 class="center-text thin small-bottom">How much tax-free cash<br> can you realease?</h2>
 				<div class="decoration deco-0 decoration-small animate-zoom"></div>
 
 				
@@ -139,16 +139,10 @@
 			<div class="footer footer-dark">
 				<a href="index.html" class="footer-logo"></a>
 				<p class="footer-text">
-					It all starts with One Simple Question
+					It all starts with <font color="#1587f9">One Simple Question</font>
 				</p>
-				<div class="footer-socials">
-					<a href="#"><i class="ion-social-facebook"></i></a>
-					<a href="#"><i class="ion-social-instagram-outline"></i></a>
-					<a href="#"><i class="ion-social-youtube-outline"></i></a>
-					<a href="#"><i class="ion-social-twitter"></i></a>
-					<a href="#" class="show-share-bottom"><i class="ion-android-share-alt"></i></a>
-				</div>
-				<p class="copyright-text">&copy; Copyright <span class="copyright-year"></span> Preferred Client Group. All rights reserved</p>
+
+				<p class="copyright-text">&copy; Copyright 2020 Preferred Client Group. All rights reserved</p>
 			</div>
 
 		</div>  
