--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</center>
 					</div><br>
 					<h4 class="color-green-dark animate-fade animate-delay-200">
-					  <center><em>It all starts with One Simple Question</em></center>
+					  <center><em>It all starts with <font color="#1587f9">One Simple Question</font></em></center>
 					</h4>
 				</div>
 			</div>
