--- a/introduce.html
+++ b/introduce.html
@@ -98,7 +98,7 @@
 
 			<div class="content-fullscreen">
 				<div class="home-fader animate-top animate-time-1000">
-							<img src="images/pictures/4.jpg" class="responsive-image" alt="img">
+							<img src="images/pictures/4b.jpg" class="responsive-image" alt="img">
 					</div>
 				</div>
 				<div class="menu-bottom-bar menu-bottom-bar-five menu-bottom-bar-text dark-menu-bar flat-menu-bar full-bottom">
@@ -113,10 +113,10 @@
 			
 		  <div class="animate-fade">
 				<div class="decoration"></div>
-				<h2 class="center-text thin small-bottom">Introduce Your Client<br>To Your Bank</h2>
+				<h2 class="center-text thin small-bottom">Introduce Your Client<br>To your Bank</h2>
 				<div class="decoration deco-2 decoration-small animate-zoom"></div>
 				<center><div class="center-boxed-text3 larger-text thin">
-					Fill in the data below, hit GO and you're done!
+					Fill in the data below, hit <font color="#30d803">GO</font> and you're done!
 			  </div></center>
 
 			<div class="decoration decoration-margins animate-fade"></div>
@@ -221,16 +221,10 @@
 			<div class="footer footer-dark">
 				<a href="index.html" class="footer-logo"></a>
 				<p class="footer-text">
-					It all starts with One Simple Question
+					It all starts with <font color="#1587f9">One Simple Question</font>
 				</p>
-				<div class="footer-socials">
-					<a href="#"><i class="ion-social-facebook"></i></a>
-					<a href="#"><i class="ion-social-instagram-outline"></i></a>
-					<a href="#"><i class="ion-social-youtube-outline"></i></a>
-					<a href="#"><i class="ion-social-twitter"></i></a>
-					<a href="#" class="show-share-bottom"><i class="ion-android-share-alt"></i></a>
-				</div>
-				<p class="copyright-text">&copy; Copyright <span class="copyright-year"></span> Preferred Client Group. All rights reserved</p>
+
+				<p class="copyright-text">&copy; Copyright 2020 Preferred Client Group. All rights reserved</p>
 			</div>
 
 		</div>  
