--- a/support.html
+++ b/support.html
@@ -116,7 +116,7 @@
 		  <div class="animate-fade">
 				<div class="decoration"></div>
 				<h2 class="center-text thin small-bottom">Contact Us</h2>
-				<div class="decoration deco-2 decoration-small animate-zoom" align="center">Please feel free to contact us for any reason. We're responsive and here to help!</div>
+				<div class="decoration deco-2 decoration-small animate-zoom" align="center">Please feel free to contact us for any reason.</div>
 	      </div>
 			   
 			   
@@ -220,16 +220,10 @@
 			<div class="footer footer-dark">
 				<a href="index.html" class="footer-logo"></a>
 				<p class="footer-text">
-					It all starts with One Simple Question
+					It all starts with <font color="#1587f9">One Simple Question</font>
 				</p>
-				<div class="footer-socials">
-					<a href="#"><i class="ion-social-facebook"></i></a>
-					<a href="#"><i class="ion-social-instagram-outline"></i></a>
-					<a href="#"><i class="ion-social-youtube-outline"></i></a>
-					<a href="#"><i class="ion-social-twitter"></i></a>
-					<a href="#" class="show-share-bottom"><i class="ion-android-share-alt"></i></a>
-				</div>
-				<p class="copyright-text">&copy; Copyright <span class="copyright-year"></span> Preferred Client Group. All rights reserved</p>
+
+				<p class="copyright-text">&copy; Copyright 2020 Preferred Client Group. All rights reserved</p>
 			</div>
 
 		</div>  
