--- a/aresources.html
+++ b/aresources.html
@@ -118,12 +118,10 @@
 			
 			<center>
 			<div class="decoration decoration-margins"></div>
-			<div class="content">
-				<a href="#" class="button button-round button-ghost button-magenta">Click Here to Go Directly to the Order Page...</a>
-			</div></center>  
+ 
 			
 		  <div class="animate-fade">
-				<h2 class="center-text thin small-bottom">Marketing <br>In support of a variety of topics</h2>
+				<h2 class="center-text thin small-bottom">Agent Resources</h2>
 				<div class="decoration deco-2 decoration-small animate-zoom"></div>
 <br>
 			  
