--- a/clientportal.html
+++ b/clientportal.html
@@ -52,7 +52,7 @@
 				<a data-sub="sidebar-sub-2" href="agentportal.html"><i class="icon-bg bg-green-dark ion-android-home"></i><span>Agent Home</span><strong class="plushide-animated"></strong></a>
 				<div class="submenu" id="sidebar-sub-2">
 					<a href="aresources.html"><span>Agent Resources</span></a>
-					<a href="arecruit.html"><span>Recruitment Made Easy</span></a>
+					<a href="arecruit.html"><span>Recruitment</span></a>
 					<a href="avideo.html"><span>Company Videos</span></a>
 					<a href="asupport.html"><span>Support</span></a>
 				</div>		
