--- a/agecyportal.html
+++ b/agecyportal.html
@@ -52,7 +52,7 @@
 					<a href="features-toggles.html"><span>Agency Recruitment</span></a>
 					<a href="features-dropdown.html"><span>Individual Recruitment</span></a>
 					<a href="Z/features-accordion.html"><span>DSA Recruitment</span></a>
-					<a href="agentportal.html"><span>Support</span></a>
+					<a href="agecyportal.html"><span>Support</span></a>
 				</div>		
 <!--				<a data-sub="sidebar-sub-3" href="#"><i class="icon-bg bg-blue-dark ion-ios-analytics"></i><span>Equity Release Chart</span><i class="ion-record"></i></a>
 
@@ -103,7 +103,7 @@
 				</div>
 				<div class="menu-bottom-bar menu-bottom-bar-five menu-bottom-bar-text dark-menu-bar flat-menu-bar full-bottom">
 			<a href="index.html"><i class="ion-android-checkmark-circle color-blue-light"></i><em>Main</em></a>
-			<a href="agentportal.html"><i class="ion-ios-home color-green-light"></i><em>Home</em></a>
+			<a href="agecyportal.html"><i class="ion-ios-home color-green-light"></i><em>Home</em></a>
 			<a href="erchart.html"><i class="ion-ios-pie-outline"></i><em>ER Chart</em></a>
 			<a href="introduce.html"><i class="ion-ios-people-outline"></i><em>Introduce </em></a>
 			<a href="support.html"><i class="ion-ios-heart-outline"></i><em>Support </em></a></div>
