--- a/clientportal.html
+++ b/clientportal.html
@@ -49,19 +49,19 @@
 					<a href="introduce.html"><span>Introduce Your Client</span></a>
 					<a href="support.html"><span>Support</span></a>
 				</div>
-				<a data-sub="sidebar-sub-2" href="agentportal.html"><i class="icon-bg bg-green-dark ion-android-home"></i><span>Agent Home</span><strong class="plushide-animated"></strong></a>
+				<a data-sub="sidebar-sub-2" href="agencyportal.html"><i class="icon-bg bg-green-dark ion-android-home"></i><span>Agency Home</span><strong class="plushide-animated"></strong></a>
 				<div class="submenu" id="sidebar-sub-2">
-					<a href="aresources.html"><span>Agent Resources</span></a>
+					<a href="aresources.html"><span>Agency Resources</span></a>
 					<a href="arecruit.html"><span>Recruitment</span></a>
 					<a href="avideo.html"><span>Company Videos</span></a>
 					<a href="asupport.html"><span>Support</span></a>
 				</div>		
-				<a data-sub="sidebar-sub-3" href="erchart.html"><i class="icon-bg bg-blue-dark ion-ios-analytics"></i><span>Catalyst Matrix</span><i class="ion-record"></i></a>
+				<a data-sub="sidebar-sub-3" href="erchart.html"><i class="icon-bg bg-blue-dark ion-ios-analytics"></i><span>Catalyst Matrix</span></a>
 
-				<a data-sub="sidebar-sub-4" href="introduce.html"><i class="icon-bg bg-magenta-dark ion-heart"></i><span>Introduce Your Client</span><i class="ion-record"></i></a>
+				<a data-sub="sidebar-sub-4" href="introduce.html"><i class="icon-bg bg-magenta-dark ion-heart"></i><span>Introduce Your Client</span></a>
 				
-				<a href="support.html"><i class="icon-bg bg-green-dark ion-ios-chatboxes-outline"></i><span>Contact</span><i class="ion-record"></i></a>
-				<a href="#" class="close-sidebar"><i class="icon-bg bg-red-light ion-android-close"></i><span>Close</span><i class="ion-record"></i></a>
+				<a href="support.html"><i class="icon-bg bg-green-dark ion-ios-chatboxes-outline"></i><span>Contact</span></a>
+				<a href="#" class="close-sidebar"><i class="icon-bg bg-red-light ion-android-close"></i><span>Close</span></a>
 			</div>
 		</div> 
 		
