--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<a href="clientportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>
 						CLIENT  PORTAL
 						</center><br>
-						<a href="agentportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>
+						<a href="agecyportal.html" class="color-white border-white animate-zoom animate-delay-500"><i class="ion-android-home"></i></a><center>
 						CONSULTANT PORTAL
 						</center>
 					</div><br>
