--- a/clientportal.html
+++ b/clientportal.html
@@ -56,10 +56,8 @@
 					<a href="avideo.html"><span>Company Videos</span></a>
 					<a href="asupport.html"><span>Support</span></a>
 				</div>		
-				<a data-sub="sidebar-sub-3" href="erchart.html"><i class="icon-bg bg-blue-dark ion-ios-analytics"></i><span>Catalyst Matrix</span></a>
-
-				<a data-sub="sidebar-sub-4" href="introduce.html"><i class="icon-bg bg-magenta-dark ion-heart"></i><span>Introduce Your Client</span></a>
-				
+				<a href="erchart.html"><i class="icon-bg bg-blue-dark ion-ios-analytics"></i><span>Catalyst Matrix</span></a>
+				<a href="introduce.html"><i class="icon-bg bg-magenta-dark ion-heart"></i><span>Introduce Your Client</span></a>
 				<a href="support.html"><i class="icon-bg bg-green-dark ion-ios-chatboxes-outline"></i><span>Contact</span></a>
 				<a href="#" class="close-sidebar"><i class="icon-bg bg-red-light ion-android-close"></i><span>Close</span></a>
 			</div>
