--- a/video.html
+++ b/video.html
@@ -24,7 +24,7 @@
 <div>
 	<div class="sidebars sidebars-dark">
 
-				<!-- BEGIN SIDEBAR LEFT -->
+<!-- BEGIN SIDEBAR LEFT -->
 		
 		<div class="sidebar sidebar-left">
 		  <div class="sidebar-header sidebar-header-image ">
@@ -53,28 +53,23 @@
 					<a href="introduce.html"><span>Introduce Your Client</span></a>
 					<a href="support.html"><span>Support</span></a>
 				</div>
-				<a data-sub="sidebar-sub-2" href="agentportal.html"><i class="icon-bg bg-green-dark ion-android-home"></i><span>Agent Home</span><strong class="plushide-animated"></strong></a>
+				<a data-sub="sidebar-sub-2" href="agencyportal.html"><i class="icon-bg bg-green-dark ion-android-home"></i><span>Agency Home</span><strong class="plushide-animated"></strong></a>
 				<div class="submenu" id="sidebar-sub-2">
-					<a href="aresources.html"><span>Agent Resources</span></a>
-					<a href="arecruit.html"><span>Recruitment Made Easy</span></a>
+					<a href="aresources.html"><span>Agency Resources</span></a>
+					<a href="arecruit.html"><span>Recruitment</span></a>
 					<a href="avideo.html"><span>Company Videos</span></a>
 					<a href="asupport.html"><span>Support</span></a>
 				</div>		
-				<a data-sub="sidebar-sub-3" href="erchart.html"><i class="icon-bg bg-blue-dark ion-ios-analytics"></i><span>Catalyst Matrix</span><i class="ion-record"></i></a>
-
-				<a data-sub="sidebar-sub-4" href="introduce.html"><i class="icon-bg bg-magenta-dark ion-heart"></i><span>Introduce Your Client</span><i class="ion-record"></i></a>
-				
-				<a href="support.html"><i class="icon-bg bg-green-dark ion-ios-chatboxes-outline"></i><span>Contact</span><i class="ion-record"></i></a>
-				<a href="#" class="close-sidebar"><i class="icon-bg bg-red-light ion-android-close"></i><span>Close</span><i class="ion-record"></i></a>
+				<a href="erchart.html"><i class="icon-bg bg-blue-dark ion-ios-analytics"></i><span>Catalyst Matrix</span></a>
+				<a href="introduce.html"><i class="icon-bg bg-magenta-dark ion-heart"></i><span>Introduce Your Client</span></a>
+				<a href="support.html"><i class="icon-bg bg-green-dark ion-ios-chatboxes-outline"></i><span>Contact</span></a>
+				<a href="#" class="close-sidebar"><i class="icon-bg bg-red-light ion-android-close"></i><span>Close</span></a>
 			</div>
 		</div> 
 		
-
-		<!-- END SIDEBAR LEFT -->
+<!-- END SIDEBAR LEFT -->
 		
-		
-	
-		<!-- BEGIN SIDEBAR RIGHT -->
+<!-- BEGIN SIDEBAR RIGHT -->		
 		
 		<div class="sidebar sidebar-right">
 			<div class="sidebar-header sidebar-header-classic">
@@ -100,8 +95,7 @@
 			</div>
 		</div>
 		
-		
-		<!-- END SIDEBAR RIGHT -->
+<!-- END SIDEBAR RIGHT -->	
 		
 	</div>
 	</div>
