--- a/clientportal.html
+++ b/clientportal.html
@@ -74,7 +74,7 @@
 					<a href="https://www.linkedin.com/in/john-dale-410186bb/"><i class="ion-social-linkedin"></i></a>
 					<a href="tel:7034080926"><i class="ion-ios-telephone"></i></a>
 					<a href="mailto: info@pcggo.com"><i class="ion-android-mail"></i></a>
-					<a href="skype:spiriter_jdale?chat"><i class="ion-social-skype"></i></a>
+<!--					<a href="skype:spiriter_jdale?chat"><i class="ion-social-skype"></i></a> -->
 					<div class="clear"></div>
 				</div>
 				<a href="index.html" class="sidebar-logo">
@@ -84,10 +84,10 @@
 
 			<div class="menu-options icon-background sidebar-menu">
 				<em class="menu-divider">Get in touch with us</em>
-				<a href="contact.html"><i class="icon-bg mail-bg ion-email"></i><span>Contact </span><i class="ion-record"></i></a>
-				<a href="tel:7034080926"><i class="icon-bg phone-bg ion-ios-telephone"></i><span>Phone</span><i class="ion-record"></i></a>
-				<a href="skype:spiriter_jdale?chat"><i class="icon-bg skype-bg ion-social-skype"></i><span>Skype</span><i class="ion-record"></i></a>
-				<a href="#" class="close-sidebar"><i class="icon-bg bg-red-light ion-android-close"></i><span>Close</span><i class="ion-record"></i></a>
+				<a href="mailto: info@pcggo.com"><i class="icon-bg mail-bg ion-email"></i><span>Email </span></a>
+				<a href="tel:7034080926"><i class="icon-bg phone-bg ion-ios-telephone"></i><span>Phone</span></a>
+<!--				<a href="skype:spiriter_jdale?chat"><i class="icon-bg skype-bg ion-social-skype"></i><span>Skype</span><i class="ion-record"></i></a> -->
+				<a href="#" class="close-sidebar"><i class="icon-bg bg-red-light ion-android-close"></i><span>Close</span></a>
 			</div>
 		</div>
 		
