--- a/agecyportal.html
+++ b/agecyportal.html
@@ -118,8 +118,8 @@
 			
 		  <div class="animate-fade">
 				<div class="decoration"></div>
-				<h2 class="center-text thin small-bottom">Agency Portal</h2><p>&nbsp;</p>
-				<div class="decoration deco-2 decoration-small animate-zoom"></div>
+				<h2 class="center-text thin small-bottom">Agency Portal</h2>
+				<div class="decoration deco-2 decoration-small animate-zoom"></div><p>&nbsp;</p>
 			  
 	<!--			<center><div class="center-boxed-text3 larger-text thin">
 					Combine Insurance, Tax-Free cash and a National Bank. What do you get?
